--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,7 +26,125 @@
 .material-icons,
 .material-icons-round {
   padding-right: 5px;
+  font-size: 20px;
 }
 .vlb {
   vertical-align: bottom;
+}
+.footer {
+  a:hover {
+    text-decoration: none;
+    color: #454545 !important;
+  }
+}
+.login {
+  .block {
+    width: 100%;
+  }
+}
+.captcha-container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Space between canvas and refresh button */
+}
+
+.captcha-container canvas {
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.3rem;
+  color: #495057;
+}
+.captcha-container button {
+  padding: 5px;
+  position: relative;
+  top: -2px;
+}
+
+@media (min-width: 992px) {
+  .content {
+    padding: 1.5rem 1.5rem 0.75rem;
+  }
+}
+.error_page {
+  text-align: center;
+  h2 {
+    margin-top: 100px;
+    margin-bottom: 0px;
+    font-size: 240px;
+    font-weight: bold;
+    line-height: 200px;
+  }
+  h4 {
+    font-size: 50px;
+  }
+}
+
+.dashboard {
+  .bg-danger {
+    background: #fd7e14 !important;
+  }
+  .stat {
+    background: #fff;
+  }
+  .material-icons,
+  .material-icons-round {
+    padding-right: 0px !important;
+    font-size: 20px;
+    color: #454545;
+  }
+  .card {
+    h5,
+    h1 {
+      color: #fff;
+    }
+  }
+}
+.sidebar-item:hover {
+  text-decoration: none;
+}
+@media (min-width: 1px) and (max-width: 991.98px) {
+  .sidebar {
+    margin-left: 0px;
+  }
+}
+
+/* .loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #17a2b8;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+} */
+
+.loader {
+  position: absolute;
+  top: calc(50vh - 25px);
+  left: calc(50% - 25px);
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #17a2b8;
+  -webkit-mask: radial-gradient(
+    circle closest-side at 50% 40%,
+    #0000 94%,
+    #000
+  );
+  transform-origin: 50% 40%;
+  animation: l25 1s infinite linear;
+}
+@keyframes l25 {
+  100% {
+    transform: rotate(1turn);
+  }
 }
