--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -80,6 +80,17 @@
 }
 
 .dashboard {
+  .bg-img:after {
+    content: "";
+    background: url(/public/box-bg.png) no-repeat;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    opacity: 0.2;
+  }
   .bg-danger {
     background: #fd7e14 !important;
   }
@@ -107,26 +118,14 @@
     margin-left: 0px;
   }
 }
-
-/* .loader {
-  width: 50px;
-  padding: 8px;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  background: #17a2b8;
-  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
-  -webkit-mask: var(--_m);
-  mask: var(--_m);
-  -webkit-mask-composite: source-out;
-  mask-composite: subtract;
-  animation: l3 1s infinite linear;
+.sidebar-item.active .sidebar-link:hover,
+.sidebar-item.active > .sidebar-link {
+  border-left-color: #17a2b8;
 }
-@keyframes l3 {
-  to {
-    transform: rotate(1turn);
-  }
-} */
-
+.sidebar-link,
+a.sidebar-link {
+  border-left: 4px solid transparent;
+}
 .loader {
   position: absolute;
   top: calc(50vh - 25px);
