--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,7 +8,7 @@
   --bs-yellow: #fcb92c;
   --bs-green: #1cbb8c;
   --bs-teal: #20c997;
-  --bs-cyan: #17a2b8;
+  --bs-cyan: #27b397;
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
@@ -24,7 +24,8 @@
   --bs-primary: #3b7ddd;
   --bs-secondary: #6c757d;
   --bs-success: #1cbb8c;
-  --bs-info: #17a2b8;
+  /* --bs-info: #27b397; */
+  --bs-info: #27b397;
   --bs-warning: #fcb92c;
   --bs-danger: #dc3545;
   --bs-light: #f5f7fb;
@@ -2740,15 +2741,15 @@ fieldset:disabled .btn {
   color: #000;
 }
 .btn-info {
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #27b397;
+  border-color: #27b397;
   color: #fff;
 }
 .btn-check:focus + .btn-info,
 .btn-info:focus,
 .btn-info:hover {
-  background-color: #148a9c;
-  border-color: #128293;
+  background-color: #27b397;
+  border-color: #27b397;
   color: #fff;
 }
 .btn-check:focus + .btn-info,
@@ -2760,8 +2761,8 @@ fieldset:disabled .btn {
 .btn-info.active,
 .btn-info:active,
 .show > .btn-info.dropdown-toggle {
-  background-color: #128293;
-  border-color: #117a8a;
+  background-color: #27b39790;
+  border-color: #27b397;
   color: #fff;
 }
 .btn-check:active + .btn-info:focus,
@@ -2769,12 +2770,12 @@ fieldset:disabled .btn {
 .btn-info.active:focus,
 .btn-info:active:focus,
 .show > .btn-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+  box-shadow: 0 0 0 0.2rem #27b39750;
 }
 .btn-info.disabled,
 .btn-info:disabled {
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #27b397;
+  border-color: #27b397;
   color: #fff;
 }
 .btn-warning {
@@ -3032,12 +3033,12 @@ fieldset:disabled .btn {
   color: #1cbb8c;
 }
 .btn-outline-info {
-  border-color: #17a2b8;
-  color: #17a2b8;
+  border-color: #27b397;
+  color: #27b397;
 }
 .btn-outline-info:hover {
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #27b397;
+  border-color: #27b397;
   color: #fff;
 }
 .btn-check:focus + .btn-outline-info,
@@ -3049,8 +3050,8 @@ fieldset:disabled .btn {
 .btn-outline-info.active,
 .btn-outline-info.dropdown-toggle.show,
 .btn-outline-info:active {
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #27b397;
+  border-color: #27b397;
   color: #fff;
 }
 .btn-check:active + .btn-outline-info:focus,
@@ -3063,7 +3064,7 @@ fieldset:disabled .btn {
 .btn-outline-info.disabled,
 .btn-outline-info:disabled {
   background-color: transparent;
-  color: #17a2b8;
+  color: #27b397;
 }
 .btn-outline-warning {
   border-color: #fcb92c;
@@ -4754,7 +4755,7 @@ fieldset:disabled .btn {
   color: #49c9a3;
 }
 .link-info {
-  color: #17a2b8;
+  color: #27b397;
 }
 .link-info:focus,
 .link-info:hover {
@@ -5119,7 +5120,7 @@ fieldset:disabled .btn {
   border-color: #1cbb8c !important;
 }
 .border-info {
-  border-color: #17a2b8 !important;
+  border-color: #27b397 !important;
 }
 .border-warning {
   border-color: #fcb92c !important;
