--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -284,12 +284,12 @@ a.sidebar-link {
   position: relative;
 }
 .login-left-block {
-  background-image: url("./images/pattern.png");
+  background-image: url("/images/pattern.png");
   width: 100%;
   height: 100%;
 }
 .login-left-block {
-  padding-top: 200px;
+  padding-top: calc(50vh - 120px);
 }
 .login-left-block .text-info b {
   color: #fff;
