color theme implemented

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -2,7 +2,7 @@ body {
   background: #fff;
 }
 a {
-  color: #137763;
+  color: var(--bs-info);
 }
 .hide {
   display: none;
@@ -79,7 +79,7 @@ a {
 }
 .dropdown-item.active,
 .dropdown-item:active {
-  background-color: #27b397 !important;
+  background-color: var(--bs-info) !important;
 }
 .dashboard {
   .bg-img:after {
@@ -120,7 +120,7 @@ a {
 
 .sidebar-item.active .sidebar-link:hover,
 .sidebar-item.active > .sidebar-link {
-  border-left-color: #27b397;
+  border-left-color: var(--bs-info);
 }
 .sidebar-link,
 a.sidebar-link {
@@ -133,7 +133,7 @@ a.sidebar-link {
   width: 50px;
   aspect-ratio: 1;
   border-radius: 50%;
-  background: #27b397;
+  background: var(--bs-info);
   -webkit-mask: radial-gradient(
     circle closest-side at 50% 40%,
     #0000 94%,
@@ -247,7 +247,7 @@ a.sidebar-link {
   }
 }
 .error_page h2 span {
-  color: #27b397;
+  color: var(--bs-info);
 }
 .btn-custom {
   position: absolute;
@@ -307,7 +307,7 @@ a.sidebar-link {
   z-index: 1;
 }
 .login-bg {
-  background: #27b397;
+  background: var(--bs-info);
   position: relative;
 }
 .login-left-block {
@@ -340,21 +340,22 @@ a.sidebar-link {
   width: 100%;
 }
 input[type="file"]::file-selector-button {
-  border: 2px solid #27b397;
+  border: 2px solid var(--bs-info);
   padding: 0.2em 0.4em;
   border-radius: 0.2em;
-  background-color: #27b397;
+  background-color: var(--bs-info);
   color: #fff;
   transition: 1s;
 }
 .sidebar-toggle:hover .hamburger,
 .sidebar-toggle:hover .hamburger:after,
 .sidebar-toggle:hover .hamburger:before {
-  background: #27b397;
+  background: var(--bs-info);
 }
 input[type="file"]::file-selector-button:hover {
-  background-color: #27b39790;
-  border: 2px solid #27b39790;
+  background-color: var(--bs-info);
+  border: 2px solid var(--bs-info);
+  opacity: 0.9;
 }
 .Toastify__toast--success {
   background-color: #27b397 !important;
@@ -380,7 +381,7 @@ input[type="file"]::file-selector-button:hover {
   text-align: center;
 }
 .picContianer {
-  border: 2px dashed #27b397;
+  border: 2px dashed var(--bs-info);
   width: 120px;
   height: 120px;
   border-radius: 60px;
@@ -394,7 +395,7 @@ input[type="file"]::file-selector-button:hover {
   border-radius: 54px;
 }
 a:hover {
-  color: #27b397;
+  color: var(--bs-info);
 }
 .categories_list {
   .category_icon {
@@ -407,14 +408,14 @@ a:hover {
   }
 
   .category_edit:hover {
-    color: #27b397;
+    color: var(--bs-info);
   }
   .category_delete:hover {
     color: red;
   }
 }
 .circle-success {
-  background: #27b397;
+  background: var(--bs-info);
   border: 2px dashed #b2fff0;
   height: 82px;
   width: 82px;
@@ -433,6 +434,35 @@ a:hover {
 }
 .resetUser {
   text-transform: capitalize;
+}
+.color-switcher {
+  position: absolute;
+  top: 80px;
+  right: 5px;
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  z-index: 9;
+  overflow: hidden;
+  span {
+    position: absolute;
+    top: 5px;
+    right: 6px;
+    width: 20px;
+    z-index: 99;
+    color: #fff;
+    cursor: pointer;
+  }
+  input {
+    position: absolute;
+    cursor: pointer;
+    top: -4px;
+    right: -4px;
+    height: 40px;
+    background: var(--bs-info);
+    width: 40px;
+    border-radius: 16px;
+  }
 }
 @media (min-width: 991.98px) {
   .content {
